# tennis-finder

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  alembic.ini  config.py  conftest.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: fe57929c43e9_.py
docs/: conf.py  create_config.rst  helpers.rst  index.rst  modules.core.routes.rst  modules.core.rst  modules.games.forms.rst  modules.games.models.rst  modules.games.routes.rst  modules.games.rst  modules.games.views.rst  modules.rst  modules.users.forms.rst  modules.users.models.rst  modules.users.routes.rst  modules.users.rst  modules.users.views.rst
helpers/: args.py  babel.py  crypto.py  datetime_helper.py  translate.py  user.py
modules/core/: app.py  app_config.py  db.py
modules/games/: __init__.py
modules/users/: __init__.py
static/css/: dialog.css  game.css  main.css
templates/: 400.html  403.html  create_game.html  edit_profile.html  find_game.html  game.html  login.html  macros.jinja  main.html  my_games.html  profile.html  register.html
tennis_finder/: __init__.py  __main__.py  conftest.py  create_config.py  main.py  translate.sh
tennis_finder/alembic/: env.py
tennis_finder/helpers/: __init__.py  crypto.py  datetime_helper.py  img.py  user.py
tennis_finder/templates/: create_game.html  game.html  login.html  macros.jinja  my_games.html  register.html
tennis_finder/translations/: babel.cfg
tests/: conftest.py
tests/helpers/: random_user.py
(+69 files in other folders)
