[flake8]
exclude = .git,alembic,static,translations,templates,venv,config.py,tests,create_config.py,build,dist,setup.py,conftest.py
max-line-length = 120

[tool:pytest]
mocked-sessions=tennis_finder.modules.core.app_config.AppConfig.db.session

[metadata]
name = tennis-finder-werozel
version = 0.0.1
author = Werozel
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Werozel/tennis-finder
project_urls =
    Bug Tracker = https://github.com/Werozel/tennis-finder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = tennis-finder
packages = find:
install_requires =
    gunicorn
    flask
    sqlalchemy
    Flask-SQLAlchemy
    alembic
    psycopg2-binary
    jinja2
    flask-bootstrap
    flask-wtf
    flask-login
    Flask-Babel
    googletrans==4.0.0rc1
    phonenumbers
    WTForms
    email_validator
    flake8
    flake8_docstrings
    pytest
    faker
    pytest-flask-sqlalchemy
    numpy
    Pillow
python_requires = >=3.6

[options.packages.find]
where = tennis-finder